# dodecahedron-creator

./: .autocil.yaml  .gitignore  Makefile  animation.py  cli.py  config.yaml  create.py  extract_theme_colors.py  format.py  main.py  package.json  pyproject.toml  readme.md  scene.json  svg_generator.py  temp-viewer.py  test_focal_point.py  themes.json  utils.py  viewer.py
dodecahedron_creator/: __init__.py  __main__.py  animation.py  config.py  models.py  svg.py  utils.py  viewer.py
