[project]
name = "dodecahedron-creator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "svgwrite>=1.4.3",
    "vedo>=2025.5.4",
    "pyyaml>=6.0.2",
    "easing-functions>=1.0.4",
    "cairosvg>=2.8.2",
    "pillow>=11.2.1",
    "requests>=2.32.4",
]

[project.scripts]
dodecahedron-creator = "dodecahedron_creator.__main__:main"

[tool.setuptools]
packages = ["dodecahedron_creator"]
